# OrderAutomator

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/: app.py  pyproject.toml  requirements.txt
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: AddItemModal.tsx  EditItemModal.tsx  ItemBox.tsx  ItemGrid.tsx  SettingsModal.tsx
frontend/src/interfaces/: AddItemModalProps.ts  EditItemModalProps.ts  Item.ts  ItemBoxProps.ts  ItemGridProps.ts  SettingsModalProps.ts
frontend/src/utils/: contrast.ts
