[project]
name = "orderautomator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.1.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pypdf>=6.7.5",
    "requests>=2.32.5",
]
